module(
    name = "ddprof",
    version = "0.19.0",
    bazel_compatibility = [">=7.2.1"],  # need support for "overlay" directory
    compatibility_level = 0,
)

bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "jemalloc", version = "5.3.0-bcr.alpha.4")
bazel_dep(name = "libcap", version = "2.27")
bazel_dep(name = "rules_bison", version = "0.4")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_flex", version = "0.4")

# For tests.
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
